# bump2version

./: .bumpversion.cfg  .gitignore  .gitownrc  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  README.rst  VERSION  index.html  prospector.yaml  pyproject.toml  requirements-dev.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: build-and-publish.yml  ci.yaml  mkdocs-gh-pages.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
RELATED/: index.html
bumpversion/: __init__.py  cli.py  functions.py  utils.py  vcs.py  version_part.py
docs/TODO/: index.html
docs/examples/semantic-versioning/: index.html
reference/bumpversion/: index.html
reference/bumpversion/cli/: index.html
reference/bumpversion/exceptions/: index.html
reference/bumpversion/functions/: index.html
reference/bumpversion/utils/: index.html
reference/bumpversion/vcs/: index.html
reference/bumpversion/version_part/: index.html
search/: search_index.json
tests/: test_cli.py  test_version_part.py
